tests/errors/invalid-interface-output.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |G - G+1| >= |G+4 - G+2|
  ┌─ tests/errors/invalid-interface-output.fil:3:5
  │
3 │     @interface[G, G+1] go_G: 1,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  │     │
  │     Invalid interface
  │     Interface signal lasts for |G - G+1|
  ·
6 │     @[G+2, G+4] out: 1,
  │     ------------------ Signal lasts for |G+4 - G+2|

